# jupyterlab-variableInspector

./: .copier-answers.yml  .eslintrc.js  .gitignore  .prettierignore  .project  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  Untitled.ipynb  install.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  build_and_deploy.yml  check-release.yml  manual_publish.yml  publish-release.yml  publish.yml  publish_to_test_pypi.yml  update-integration-tests.yml
binder/: environment.yml  postBuild
lckr_jupyterlab_variableinspector/: __init__.py
schema/: jupyterlab-variableInspector-settings.json  plugin.json
src/: LICENCE.md  handler.ts  index.ts  inspectorscripts.ts  kernelconnector.ts  manager.ts  matrixview.ts.f  tokens.ts  var_list.py  variableinspector.ts
style/: base.css  index.css
ui-tests/: README.md  package.json
ui-tests/tests/: lckr_jupyterlab_variableinspector.spec.ts
